--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 header {
-    background-color: #4CAF50;
-    color: white;
+    background-color: #0d0457;
+    color: rgb(43, 255, 0);
     padding: 20px 0;
     text-align: center;
 }
@@ -9,19 +9,19 @@ body {
     font-family: 'Arial', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4;
-    color: #333;
+    background-color: #000000;
+    color: #ffffff;
 }
 
 nav {
-    background-color: #333;
+    background-color: #0c5986;
     overflow: hidden;
 }
 
 nav a {
     float: left;
     display: block;
-    color: white;
+    color: rgb(0, 0, 0);
     text-align: center;
     align-items: center;
     padding: 14px 20px;
@@ -29,8 +29,8 @@ nav a {
 }
 
 nav a:hover {
-    background-color: #ddd;
-    color: black;
+    background-color: #090342;
+    color: rgb(9, 255, 21);
 }
 
 .gamescontainer {
@@ -40,9 +40,9 @@ nav a:hover {
 }
 
 .game {
-    background: white;
+    background: rgb(148, 185, 185);
     border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 8px rgba(85, 67, 67, 0.1);
     margin: 20px;
     padding: 20px;
     text-align: center;
@@ -70,10 +70,10 @@ nav a:hover {
 }
 
 .game button {
-    background-color: #4CAF50;
+    background-color: #7afc7f;
     border: none;
     border-radius: 4px;
-    color: white;
+    color: rgb(0, 0, 0);
     cursor: pointer;
     padding: 10px 20px;
     text-transform: uppercase;
@@ -81,31 +81,25 @@ nav a:hover {
 }
 
 .game button:hover {
-    background-color: #45a049;
+    background-color: #0f0cbd;
 }
-
-
-
-
 .categorycontainer {
     display: flex;
     flex-wrap: wrap; 
     justify-content: center;
     margin: 20px;
 }
-
 .category {
     margin: 5px;
     padding: 5px;
     text-align: center;
     width: calc(20% - 20px);
 }
-
 .category button {
-    background-color: #4CAF50;
+    background-color: #38ee00;
     border: none;
     border-radius: 8px;
-    color: white;
+    color: rgb(14, 55, 56);
     cursor: pointer;
     padding: 20px 30px;
     width: 100%;
@@ -113,14 +107,10 @@ nav a:hover {
     text-transform: uppercase;
     transition: background-color 0.3s, transform 0.3s;
 }
-
 .category button:hover {
-    background-color: #45a049;
-    transform: scale(0.9);
+    background-color: #85a8f3;
+    transform: scale(0.91);
 }
-
-
-
 @media (max-width: 768px) {
     .game {
         width: calc(50% - 40px);
